added links to foli client and winterstars' texturepack

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -517,7 +517,7 @@ a {
   -webkit-transition: color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
-  color: #111111;
+  color: #9b58ff;
 }
 
 sub {
