--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -75,7 +75,7 @@
 
 	a {
 		@include vendor('transition', 'color #{_duration(transition)} ease-in-out');
-		color: _palette(accent1, bg);
+		color: _palette(fg-bold);
 	}
 
 	sub {
