Made footer more subtle

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1878,7 +1878,7 @@ body.is-touch .main {
   line-height: 1em;
   padding: 1.5em;
   background: #111111;
-  color: #dfdfdf;
+  color: #222222;
   overflow: hidden;
 }
 #footer > * {
